# hackathon-todo-evolution

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-push.yml  ci.yml  deploy-oke.yml  deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/agents/: __init__.py  task_agent.py  tools.py
backend/src/agents/blueprints/: __init__.py  base.py  blueprint_orchestrator.py  deployment_manager.py  helm_builder.py  infra_analyzer.py  k8s_generator.py
backend/src/agents/skills/: __init__.py  base.py  nlp_processor.py  orchestrator.py  productivity_coach.py  task_analyzer.py  task_organizer.py  task_scheduler.py
backend/src/middleware/: __init__.py  auth.py
backend/src/models/: __init__.py  conversation.py  message.py  tag.py  task.py
backend/src/routers/: __init__.py  auth.py  blueprints.py  chat.py  reminders.py  skills.py  tags.py  tasks.py  voice.py
backend/src/services/: __init__.py  conversation_service.py  event_service.py  recurring_service.py  tag_service.py  task_service.py
backend/tests/: conftest.py  test_health.py  test_tasks_api.py
dapr/: README.md  configuration.yaml
dapr/components/: cron-binding.yaml  pubsub.yaml  secrets.yaml  statestore.yaml
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .env.local.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthForm.tsx  ChatInterface.tsx  (+8 more)
helm/todo-app/: Chart.yaml  values-cloud.yaml  values-oke.yaml  values.yaml
k8s/: README.md
k8s/base/: configmap.yaml  ingress.yaml  namespace.yaml  secret.yaml.template
k8s/dapr/: backend-deployment.yaml  kafka-cluster.yaml
scripts/: build-images.sh  cleanup.sh  deploy-dapr.sh  deploy-minikube.sh
specs/001-phase1-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-fullstack-web/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-phase3-chatbot/: plan.md  spec.md  tasks.md
specs/004-phase4-kubernetes/: plan.md  spec.md  tasks.md
specs/005-phase5-cloud/: plan.md  spec.md  tasks.md
src/: __init__.py  exceptions.py  main.py
src/cli/: __init__.py  formatters.py  menu.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_service.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli_workflow.py
tests/unit/: test_formatters.py  test_task.py  test_task_service.py
(+42 files in other folders)
